--- a/packages/islands/package.json
+++ b/packages/islands/package.json
@@ -84,7 +84,8 @@
     "collectCoverage": true,
     "coverageReporters": [
       "text",
-      "cobertura"
+      "cobertura",
+      "lcov"
     ]
   }
 }
