--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -43,16 +43,14 @@ jobs:
 
       - name: "@comity/islands - Upload coverage to Codecov"
         uses: codecov/codecov-action@v4
-        working-directory: ./packages/islands
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          files: ./coverage/lcov.info
+          files: ./packages/islands/coverage/lcov.info
           flags: islands
 
       # - name: "@comity/react - Upload coverage to Codecov"
       #   uses: codecov/codecov-action@v4
-      #   working-directory: ./packages/react
       #   with:
       #     token: ${{ secrets.CODECOV_TOKEN }}
-      #     files: ./coverage/lcov.info
+      #     files: ./packages/react/coverage/lcov.info
       #     flags: react
