--- a/packages/islands/package.json
+++ b/packages/islands/package.json
@@ -10,7 +10,7 @@
     "build": "tsc",
     "prepublish": "tsc",
     "clean": "tsc --build --clean",
-    "test": "NODE_OPTIONS='--experimental-vm-modules --experimental-specifier-resolution=node' jest --coverage"
+    "test": "vitest run --coverage"
   },
   "files": [
     "./dist",
@@ -68,24 +68,10 @@
     "@hono/vite-dev-server": "^0.12.2",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.17.6",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "@vitest/coverage-v8": "^2.1.5",
+    "jsdom": "^25.0.1",
     "typescript": "^5.6.3",
-    "vite": "^5.4.11"
-  },
-  "engines": {
-    "node": "20.*"
-  },
-  "jest": {
-    "transform": {},
-    "testMatch": [
-      "**/tests/unit/**/*.spec.js"
-    ],
-    "collectCoverage": true,
-    "coverageReporters": [
-      "text",
-      "cobertura",
-      "lcov"
-    ]
+    "vite": "^5.4.11",
+    "vitest": "^2.1.5"
   }
 }
