--- a/packages/islands/tsconfig.json
+++ b/packages/islands/tsconfig.json
@@ -11,5 +11,5 @@
     "types": ["node", "vite/client"]
   },
   "include": ["./src", "./types"],
-  "exclude": ["./tests"]
+  "exclude": ["./**/*.test.ts"]
 }
