--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@comity/graphql",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "type": "module",
   "repository": {
     "type": "git",
@@ -10,7 +10,7 @@
     "build": "tsc",
     "prepublish": "tsc",
     "clean": "tsc --build --clean",
-    "test": "NODE_OPTIONS='--experimental-vm-modules --experimental-specifier-resolution=node' jest --coverage"
+    "test": "vitest run --coverage"
   },
   "files": [
     "./dist",
@@ -40,26 +40,12 @@
   },
   "devDependencies": {
     "@hono/vite-dev-server": "^0.12.2",
-    "@types/jest": "^29.5.14",
     "@types/node": "^20.17.6",
-    "jest": "^29.7.0",
-    "typescript": "^5.6.3"
+    "@vitest/coverage-v8": "^2.1.5",
+    "typescript": "^5.6.3",
+    "vitest": "2.1.5"
   },
   "resolutions": {
     "graphql": "^16.9.0"
-  },
-  "engines": {
-    "node": "20.*"
-  },
-  "jest": {
-    "transform": {},
-    "testMatch": [
-      "**/tests/unit/**/*.spec.js"
-    ],
-    "collectCoverage": true,
-    "coverageReporters": [
-      "text",
-      "cobertura"
-    ]
   }
 }
