--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "tsc",
     "prepublish": "tsc",
-    "clean": "tsc --build --clean"
+    "clean": "tsc --build --clean",
+    "test": "vitest run --coverage"
   },
   "files": [
     "./dist"
@@ -28,28 +29,15 @@
   },
   "devDependencies": {
     "@hono/vite-dev-server": "^0.12.2",
-    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.17.6",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "jest": "^29.7.0",
+    "@vitest/coverage-v8": "^2.1.5",
+    "jsdom": "^25.0.1",
     "typescript": "^5.6.3",
-    "vite": "^5.4.11"
-  },
-  "engines": {
-    "node": "20.*"
-  },
-  "jest": {
-    "transform": {},
-    "testMatch": [
-      "**/tests/unit/**/*.spec.js(x)?"
-    ],
-    "collectCoverage": true,
-    "coverageReporters": [
-      "text",
-      "cobertura"
-    ]
+    "vite": "^5.4.11",
+    "vitest": "^2.1.5"
   }
 }
