--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@comity/graphql",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "type": "module",
   "repository": {
     "type": "git",
@@ -36,16 +36,13 @@
   "dependencies": {
     "@envelop/core": "^5.0.2",
     "graphql": "^16.9.0",
-    "hono": "^4.6.10"
+    "hono": "^4.6.12"
   },
   "devDependencies": {
     "@hono/vite-dev-server": "^0.12.2",
-    "@types/node": "^20.17.6",
-    "@vitest/coverage-v8": "^2.1.5",
-    "typescript": "^5.6.3",
-    "vitest": "2.1.5"
-  },
-  "resolutions": {
-    "graphql": "^16.9.0"
+    "@types/node": "^20.17.9",
+    "@vitest/coverage-v8": "^2.1.8",
+    "typescript": "^5.7.2",
+    "vitest": "^2.1.8"
   }
 }
