--- a/examples/graphql/package.json
+++ b/examples/graphql/package.json
@@ -1,5 +1,7 @@
 {
+  "name": "@comity/example-graphql",
   "type": "module",
+  "private": true,
   "scripts": {
     "dev": "wrangler dev src/index.ts",
     "deploy": "wrangler deploy src/index.ts"
