--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -1,5 +1,7 @@
 {
+  "name": "@comity/example-react",
   "type": "module",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build --mode client && vite build",
