--- a/packages/islands/package.json
+++ b/packages/islands/package.json
@@ -1,7 +1,17 @@
 {
   "name": "@comity/islands",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "type": "module",
+  "author": "Filippo Bovo <hello@filippobovo.com>",
+  "license": "MIT",
+  "keywords": [
+    "hono",
+    "cloudflare",
+    "vite",
+    "framework",
+    "partial hydration",
+    "island architecture"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/pirosauro/comity.git"
