--- a/templates/react/package.json
+++ b/templates/react/package.json
@@ -9,8 +9,8 @@
     "deploy": "$npm_execpath run build && wrangler pages deploy dist --env production"
   },
   "dependencies": {
-    "@comity/islands": "workspace:*",
-    "@comity/react": "workspace:*",
+    "@comity/islands": "^0.3.0",
+    "@comity/react": "^0.3.0",
     "@nanostores/react": "^0.7.3",
     "hono": "^4.6.14",
     "nanostores": "^0.10.3",
