--- a/packages/graphql/tsconfig.json
+++ b/packages/graphql/tsconfig.json
@@ -8,7 +8,7 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "ES2022",
-    "types": ["node"]
+    "types": []
   },
   "include": ["./src", "./types"],
   "exclude": ["./tests"]
