--- a/templates/react/package.json
+++ b/templates/react/package.json
@@ -9,8 +9,8 @@
     "deploy": "$npm_execpath run build && wrangler pages deploy dist --env production"
   },
   "dependencies": {
-    "@comity/islands": "workspace:*",
-    "@comity/react": "workspace:*",
+    "@comity/islands": "^0.3.2",
+    "@comity/react": "^0.3.2",
     "@nanostores/react": "^0.8.4",
     "hono": "^4.7.0",
     "nanostores": "^0.11.3",
