--- a/packages/islands/tsconfig.json
+++ b/packages/islands/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "declaration": true,
     "esModuleInterop": true,
+    "jsx": "react-jsx",
+    "jsxImportSource": "hono/jsx",
     "module": "ES2022",
     "moduleResolution": "Bundler",
     "outDir": "./dist",
