--- a/packages/islands/package.json
+++ b/packages/islands/package.json
@@ -76,6 +76,7 @@
   },
   "devDependencies": {
     "@hono/vite-dev-server": "^0.18.3",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^20.17.24",
     "@vitest/coverage-v8": "^3.0.8",
     "jsdom": "^26.0.0",
