--- a/packages/islands/package.json
+++ b/packages/islands/package.json
@@ -45,25 +45,6 @@
     },
     "./types": {
       "types": "./types/index.d.ts"
-    },
-    "./types/client": {
-      "types": "./types/client.d.ts"
-    }
-  },
-  "typesVersions": {
-    "*": {
-      "client": [
-        "./dist/client"
-      ],
-      "vite": [
-        "./dist/vite"
-      ],
-      "vite/client": [
-        "./dist/vite/client"
-      ],
-      "types": [
-        "./types"
-      ]
     }
   },
   "publishConfig": {
@@ -75,7 +56,8 @@
     "hono": "^4.7.4"
   },
   "devDependencies": {
-    "@hono/vite-dev-server": "^0.18.3",
+    "@hono/vite-dev-server": "^0.19.0",
+    "@testing-library/dom": "^10.4.0",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^20.17.24",
     "@vitest/coverage-v8": "^3.0.8",
