--- a/packages/islands/tsconfig.json
+++ b/packages/islands/tsconfig.json
@@ -13,5 +13,5 @@
     "types": ["node", "vite/client"]
   },
   "exclude": ["**/*.test.ts"],
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/types/**/*.d.ts"]
+  "include": ["src/**/*.ts", "src/**/*.tsx", "types/**/*.d.ts"]
 }
