--- a/templates/minimal/package.json
+++ b/templates/minimal/package.json
@@ -10,8 +10,7 @@
   },
   "dependencies": {
     "@comity/islands": "^0.3.4",
-    "hono": "^4.7.4",
-    "nanostores": "^0.11.4"
+    "hono": "^4.7.4"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250312.0",
