--- a/packages/preact/package.json
+++ b/packages/preact/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@comity/islands",
+  "name": "@comity/preact",
   "version": "0.3.4",
   "type": "module",
   "author": "Filippo Bovo <hello@filippobovo.com>",
@@ -8,14 +8,10 @@
     "hono",
     "cloudflare",
     "vite",
-    "framework",
+    "preact",
     "partial hydration",
     "island architecture"
   ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/pirosauro/comity.git"
-  },
   "scripts": {
     "build": "tsc",
     "prepublish": "tsc",
@@ -30,21 +26,6 @@
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
-    },
-    "./client": {
-      "types": "./dist/client/index.d.ts",
-      "import": "./dist/client/index.js"
-    },
-    "./vite": {
-      "types": "./dist/vite/index.d.ts",
-      "import": "./dist/vite/index.js"
-    },
-    "./vite/client": {
-      "types": "./dist/vite/client.d.ts",
-      "import": "./dist/vite/client.js"
-    },
-    "./types": {
-      "types": "./types/index.d.ts"
     }
   },
   "publishConfig": {
@@ -52,18 +33,20 @@
     "access": "public"
   },
   "dependencies": {
-    "fdir": "^6.4.3",
-    "hono": "^4.7.4"
+    "@comity/islands": "workspace:*",
+    "hono": "^4.7.4",
+    "preact": "^10.26.4",
+    "preact-render-to-string": "^6.5.13"
   },
   "devDependencies": {
-    "@hono/vite-dev-server": "^0.19.0",
-    "@testing-library/dom": "^10.4.0",
-    "@types/jsdom": "^21.1.7",
+    "@hono/vite-dev-server": "^0.18.3",
+    "@testing-library/preact": "^3.2.4",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.17.24",
-    "@vitest/coverage-v8": "^3.0.9",
+    "@vitest/coverage-v8": "^3.0.8",
     "jsdom": "^26.0.0",
     "typescript": "^5.8.2",
     "vite": "^6.2.2",
-    "vitest": "^3.0.9"
+    "vitest": "^3.0.8"
   }
 }
