--- a/templates/preact/package.json
+++ b/templates/preact/package.json
@@ -9,20 +9,18 @@
     "deploy": "$npm_execpath run build && wrangler pages deploy dist --env production"
   },
   "dependencies": {
-    "@comity/islands": "^0.4.0",
-    "@comity/react": "^0.4.0",
-    "@nanostores/react": "^0.8.4",
+    "@comity/islands": "0.4.0",
+    "@comity/preact": "0.4.0",
+    "@nanostores/preact": "^0.5.2",
     "hono": "^4.7.4",
     "nanostores": "^0.11.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "preact": "^10.26.4",
+    "preact-render-to-string": "^6.5.13"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250313.0",
     "@hono/vite-cloudflare-pages": "^0.4.2",
     "@hono/vite-dev-server": "^0.18.3",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
     "vite": "^6.2.2",
     "wrangler": "^3.114.1"
   }
