refactoring: moving to final design

--- a/templates/alpine/package.json
+++ b/templates/alpine/package.json
@@ -10,14 +10,15 @@
   },
   "dependencies": {
     "@comity/islands": "workspace:*",
-    "hono": "^4.7.5"
+    "alpinejs": "^3.14.9",
+    "hono": "^4.7.4"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250319.0",
+    "@cloudflare/workers-types": "^4.20250312.0",
     "@hono/vite-cloudflare-pages": "^0.4.2",
     "@hono/vite-dev-server": "^0.18.3",
-    "vite": "^6.2.2",
-    "vite-plugin-dynamic-import": "^1.6.0",
-    "wrangler": "^3.114.2"
+    "@types/alpinejs": "^3.13.11",
+    "vite": "^6.2.1",
+    "wrangler": "^3.114.1"
   }
 }
