--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,6 +31,9 @@ jobs:
       - run: pnpm install --frozen-lockfile
         name: Install dependencies
 
+      # - run: pnpm pack
+      #   name: Resolve workspace:* dependencies
+
       - run: pnpm -r publish --access public --no-git-checks --tag latest
         name: Publish 🚀
         shell: bash
