--- a/templates/graphql/package.json
+++ b/templates/graphql/package.json
@@ -7,7 +7,7 @@
     "deploy": "wrangler deploy src/index.ts"
   },
   "dependencies": {
-    "@comity/graphql": "^0.4.0",
+    "@comity/graphql": "workspace:*",
     "@envelop/core": "^5.2.3",
     "graphql": "^16.10.0",
     "hono": "^4.7.4"
