--- a/templates/react/package.json
+++ b/templates/react/package.json
@@ -3,27 +3,27 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "comity dev",
     "build": "vite build --mode client && vite build",
     "preview": "wrangler pages dev dist",
     "deploy": "$npm_execpath run build && wrangler pages deploy dist --env production"
   },
   "dependencies": {
-    "@comity/islands": "^0.4.0",
-    "@comity/react": "^0.4.0",
+    "@comity/islands": "workspace:*",
+    "@comity/react": "workspace:*",
     "@nanostores/react": "^0.8.4",
-    "hono": "^4.7.4",
+    "hono": "^4.7.5",
     "nanostores": "^0.11.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250313.0",
+    "@cloudflare/workers-types": "^4.20250319.0",
     "@hono/vite-cloudflare-pages": "^0.4.2",
     "@hono/vite-dev-server": "^0.18.3",
-    "@types/react": "^18.3.18",
+    "@types/react": "^18.3.19",
     "@types/react-dom": "^18.3.5",
     "vite": "^6.2.2",
-    "wrangler": "^3.114.1"
+    "wrangler": "^3.114.2"
   }
 }
