--- a/templates/react/package.json
+++ b/templates/react/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "comity dev",
+    "dev": "vite",
     "build": "vite build --mode client && vite build",
     "preview": "wrangler pages dev dist",
     "deploy": "$npm_execpath run build && wrangler pages deploy dist --env production"
