--- a/packages/islands/tsconfig.json
+++ b/packages/islands/tsconfig.json
@@ -4,13 +4,13 @@
     "esModuleInterop": true,
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
-    "module": "ES2022",
+    "module": "ESNext",
     "moduleResolution": "Bundler",
     "outDir": "./dist",
     "skipLibCheck": true,
     "strict": true,
     "target": "ES2022",
-    "types": ["node", "vite/client"]
+    "types": ["node", "vite/client", "./types/virtual-comity-islands.d.ts"]
   },
   "exclude": ["**/*.test.ts"],
   "include": ["src/**/*.ts", "src/**/*.tsx", "types/**/*.d.ts"]
