feat: add script to update template package versions to workspace references

--- a/templates/alpine/package.json
+++ b/templates/alpine/package.json
@@ -9,7 +9,7 @@
     "deploy": "$npm_execpath run build && wrangler pages deploy dist --env production"
   },
   "dependencies": {
-    "@comity/islands": "^0.4.0",
+    "@comity/islands": "workspace:*",
     "alpinejs": "^3.14.9",
     "hono": "^4.7.5"
   },
