--- a/templates/preact/package.json
+++ b/templates/preact/package.json
@@ -9,8 +9,8 @@
     "deploy": "$npm_execpath run build && wrangler pages deploy dist --env production"
   },
   "dependencies": {
-    "@comity/islands": "^0.4.0",
-    "@comity/preact": "^0.4.0",
+    "@comity/islands": "workspace:*",
+    "@comity/preact": "workspace:*",
     "@nanostores/preact": "^0.5.2",
     "hono": "^4.7.5",
     "nanostores": "^0.11.4",
