--- a/packages/islands/tsconfig.json
+++ b/packages/islands/tsconfig.json
@@ -7,6 +7,7 @@
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "outDir": "./dist",
+    "rootDir": "./src",
     "skipLibCheck": true,
     "strict": true,
     "target": "ES2022",
