--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@comity/react",
-  "version": "0.4.2",
+  "version": "0.4.1",
   "type": "module",
   "author": "Filippo Bovo <hello@filippobovo.com>",
   "license": "MIT",
@@ -27,13 +27,13 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
     },
-    "./components": {
-      "types": "./dist/components/index.d.ts",
-      "import": "./dist/components/index.js"
-    },
     "./streaming": {
       "node": "./dist/streaming/stream-node.js",
       "default": "./dist/streaming/stream-edge.js"
+    },
+    "./vite": {
+      "types": "./dist/vite/index.d.ts",
+      "import": "./dist/vite/index.js"
     }
   },
   "publishConfig": {
@@ -48,15 +48,15 @@
   },
   "devDependencies": {
     "@hono/vite-dev-server": "^0.18.3",
-    "@testing-library/react": "^16.2.0",
+    "@testing-library/react": "^16.3.0",
     "@types/jest": "^29.5.14",
-    "@types/node": "^20.17.28",
+    "@types/node": "^20.17.30",
     "@types/react": "^18.3.20",
-    "@types/react-dom": "^18.3.5",
-    "@vitest/coverage-v8": "^3.0.9",
+    "@types/react-dom": "^18.3.6",
+    "@vitest/coverage-v8": "^3.1.1",
     "jsdom": "^26.0.0",
     "typescript": "^5.8.2",
-    "vite": "^6.2.3",
-    "vitest": "^3.0.9"
+    "vite": "^6.2.5",
+    "vitest": "^3.1.1"
   }
 }
