--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -4,13 +4,14 @@
     "esModuleInterop": true,
     "jsx": "react-jsx",
     "jsxImportSource": "react",
-    "module": "ES2022",
+    "module": "ESNext",
     "moduleResolution": "Bundler",
+    "rootDir": "./src",
     "outDir": "./dist",
     "skipLibCheck": true,
     "strict": true,
     "target": "ES2022",
-    "types": ["node", "vite/client", "@comity/islands"]
+    "types": ["node", "vite/client", "@comity/islands/types"]
   },
   "exclude": ["**/*.test.ts"],
   "include": ["src/**/*.ts", "src/**/*.tsx", "types/**/*.d.ts"]
