--- a/templates/react/package.json
+++ b/templates/react/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vite build --mode client && vite build",
+    "build": "comity build",
     "preview": "wrangler pages dev dist",
     "deploy": "$npm_execpath run build && wrangler pages deploy dist --env production"
   },
@@ -18,12 +18,12 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250327.0",
+    "@cloudflare/workers-types": "^4.20250403.0",
     "@hono/vite-cloudflare-pages": "^0.4.2",
-    "@hono/vite-dev-server": "^0.18.3",
+    "@hono/vite-dev-server": "^0.19.0",
     "@types/react": "^18.3.20",
-    "@types/react-dom": "^18.3.5",
-    "vite": "^6.2.3",
-    "wrangler": "^4.6.0"
+    "@types/react-dom": "^18.3.6",
+    "vite": "^6.2.5",
+    "wrangler": "^4.7.0"
   }
 }
