--- a/packages/islands/package.json
+++ b/packages/islands/package.json
@@ -17,13 +17,13 @@
     "url": "https://github.com/pirosauro/comity.git"
   },
   "scripts": {
-    "build": "tsc",
-    "prepublish": "tsc",
+    "build": "tsc & rollup --config rollup.config.mjs",
+    "prepublish": "tsc & rollup --config rollup.config.mjs",
     "clean": "tsc --build --clean",
     "test": "vitest run --coverage"
   },
   "bin": {
-    "comity": "./dist/cli.js"
+    "comity": "./dist/cli.bundle.js"
   },
   "files": [
     "./dist",
@@ -37,6 +37,14 @@
     "./client": {
       "types": "./dist/client/index.d.ts",
       "import": "./dist/client/index.js"
+    },
+    "./middlewares": {
+      "types": "./dist/middlewares/index.d.ts",
+      "import": "./dist/middlewares/index.js"
+    },
+    "./streaming": {
+      "node": "./dist/streaming/render-to-stream.js",
+      "default": "./dist/streaming/render-to-stream.js"
     },
     "./vite": {
       "types": "./dist/vite/index.d.ts",
@@ -56,18 +64,22 @@
   },
   "dependencies": {
     "fdir": "^6.4.3",
-    "hono": "^4.7.5"
+    "hono": "^4.7.6"
   },
   "devDependencies": {
     "@hono/vite-dev-server": "^0.19.0",
+    "@rollup/plugin-commonjs": "^28.0.3",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-typescript": "^12.1.2",
     "@testing-library/dom": "^10.4.0",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^20.17.30",
     "@vitest/coverage-v8": "^3.1.1",
     "commander": "^13.1.0",
     "jsdom": "^26.0.0",
-    "typescript": "^5.8.2",
-    "vite": "^6.2.5",
+    "rollup": "^4.39.0",
+    "typescript": "^5.8.3",
+    "vite": "^6.2.6",
     "vitest": "^3.1.1"
   }
 }
