--- a/packages/preact/package.json
+++ b/packages/preact/package.json
@@ -27,9 +27,13 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
     },
-    "./components": {
-      "types": "./dist/components/index.d.ts",
-      "import": "./dist/components/index.js"
+    "./streaming": {
+      "node": "./dist/streaming/render-to-stream-node.js",
+      "default": "./dist/streaming/render-to-stream-edge.js"
+    },
+    "./vite": {
+      "types": "./dist/vite/index.d.ts",
+      "import": "./dist/vite/index.js"
     }
   },
   "publishConfig": {
@@ -38,19 +42,19 @@
   },
   "dependencies": {
     "@comity/islands": "workspace:*",
-    "hono": "^4.7.5",
-    "preact": "^10.26.4",
+    "hono": "^4.7.6",
+    "preact": "^10.26.5",
     "preact-render-to-string": "^6.5.13"
   },
   "devDependencies": {
-    "@hono/vite-dev-server": "^0.18.3",
+    "@hono/vite-dev-server": "^0.19.0",
     "@testing-library/preact": "^3.2.4",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.17.30",
     "@vitest/coverage-v8": "^3.1.1",
     "jsdom": "^26.0.0",
-    "typescript": "^5.8.2",
-    "vite": "^6.2.5",
+    "typescript": "^5.8.3",
+    "vite": "^6.2.6",
     "vitest": "^3.1.1"
   }
 }
