--- a/templates/minimal/package.json
+++ b/templates/minimal/package.json
@@ -4,20 +4,20 @@
   "private": true,
   "scripts": {
     "dev": "comity dev",
-    "build": "vite build --mode client && vite build",
+    "build": "comity build",
     "preview": "wrangler pages dev dist",
     "deploy": "$npm_execpath run build && wrangler pages deploy dist --env production"
   },
   "dependencies": {
     "@comity/islands": "workspace:*",
-    "hono": "^4.7.5"
+    "hono": "^4.7.6"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250403.0",
+    "@cloudflare/workers-types": "^4.20250412.0",
     "@hono/vite-cloudflare-pages": "^0.4.2",
-    "@hono/vite-dev-server": "^0.18.3",
-    "vite": "^6.2.5",
+    "@hono/vite-dev-server": "^0.19.0",
+    "vite": "^6.2.6",
     "vite-plugin-dynamic-import": "^1.6.0",
-    "wrangler": "^3.114.3"
+    "wrangler": "^4.10.0"
   }
 }
