--- a/templates/react/package.json
+++ b/templates/react/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "comity dev",
     "build": "comity build",
     "preview": "wrangler pages dev dist",
     "deploy": "$npm_execpath run build && wrangler pages deploy dist --env production"
@@ -11,19 +11,19 @@
   "dependencies": {
     "@comity/islands": "workspace:*",
     "@comity/react": "workspace:*",
-    "@nanostores/react": "^0.8.4",
-    "hono": "^4.7.5",
-    "nanostores": "^0.11.4",
+    "@nanostores/react": "^1.0.0",
+    "hono": "^4.7.6",
+    "nanostores": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250403.0",
+    "@cloudflare/workers-types": "^4.20250412.0",
     "@hono/vite-cloudflare-pages": "^0.4.2",
     "@hono/vite-dev-server": "^0.19.0",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
-    "vite": "^6.2.5",
-    "wrangler": "^4.7.0"
+    "vite": "^6.2.6",
+    "wrangler": "^4.10.0"
   }
 }
