fix: correct build script command for proper execution

--- a/packages/islands/package.json
+++ b/packages/islands/package.json
@@ -17,7 +17,7 @@
     "url": "https://github.com/pirosauro/comity.git"
   },
   "scripts": {
-    "build": "tsc & rollup --config rollup.config.mjs",
+    "build": "tsc && rollup --config rollup.config.mjs",
     "prepublish": "tsc & rollup --config rollup.config.mjs",
     "clean": "tsc --build --clean",
     "test": "vitest run --coverage"
