feat: update version to 0.4.5

--- a/templates/alpine/package.json
+++ b/templates/alpine/package.json
@@ -3,8 +3,8 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vite build --mode client && vite build",
+    "dev": "comity dev",
+    "build": "comity build",
     "preview": "wrangler pages dev dist",
     "deploy": "$npm_execpath run build && wrangler pages deploy dist --env production"
   },
