--- a/packages/islands/package.json
+++ b/packages/islands/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "build": "tsc && rollup --config rollup.config.mjs",
-    "prepublish": "tsc & rollup --config rollup.config.mjs",
+    "prepublish": "tsc && rollup --config rollup.config.mjs",
     "clean": "tsc --build --clean",
     "test": "vitest run --coverage"
   },
