feat: update package versions to 0.4.6

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -8,7 +8,7 @@
       "@comity/react",
       "@comity/islands",
       "@comity/graphql",
-      "@comity/starter"
+      "create-comity"
     ]
   ],
   "linked": [],
