chore: update dependencies in package.json files across templates

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -8,6 +8,8 @@
       "@comity/react",
       "@comity/islands",
       "@comity/graphql",
+      "@comity/errors",
+      "@comity/ui",
       "create-comity"
     ]
   ],
