--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,7 +2,11 @@
   "name": "@comity/ui",
   "type": "module",
   "version": "0.4.6",
-  "private": true,
+  "author": "Filippo Bovo <hello@filippobovo.com>",
+  "license": "MIT",
+  "keywords": [
+    "css"
+  ],
   "exports": {
     "./*.css": "./lib/*.css"
   }
